--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
             src="images/messi.jpg"
             alt="Card image cap"
           />
-          <div class="card-body">
+          <div class="card-body" id="messi-card">
             <h5 class="card-title">Lionel Messi</h5>
-            <button>Select</button>
+            <button
+              id="messi-card"
+              class="player-btn"
+              style="border: 2px solid black"
+            >
+              Select
+            </button>
           </div>
         </div>
         <div>
@@ -44,9 +50,15 @@
               src="images/ronaldo.jpg"
               alt="Card image cap"
             />
-            <div class="card-body">
+            <div class="card-body" id="roanldo-card">
               <h5 class="card-title">Cristiano Ronaldo</h5>
-              <a href="#" class="btn btn-primary">Select</a>
+              <button
+                id="ronaldo-card"
+                class="player-btn"
+                style="border: 2px solid black"
+              >
+                Select
+              </button>
             </div>
           </div>
         </div>
@@ -59,7 +71,13 @@
             />
             <div class="card-body">
               <h5 class="card-title">Bale</h5>
-              <a href="#" class="btn btn-primary">Select</a>
+              <button
+                class="player-btn"
+                id="bale-card"
+                style="border: 2px solid black"
+              >
+                Select
+              </button>
             </div>
           </div>
         </div>
@@ -72,7 +90,13 @@
             />
             <div class="card-body">
               <h5 class="card-title">Di Maria</h5>
-              <a href="#" class="btn btn-primary">Select</a>
+              <button
+                class="player-btn"
+                id="maria-card"
+                style="border: 2px solid black"
+              >
+                Select
+              </button>
             </div>
           </div>
         </div>
@@ -85,7 +109,13 @@
             />
             <div class="card-body">
               <h5 class="card-title">Haland</h5>
-              <a href="#" class="btn btn-primary">Select</a>
+              <button
+                class="player-btn"
+                id="haland-card"
+                style="border: 2px solid black"
+              >
+                Select
+              </button>
             </div>
           </div>
         </div>
@@ -98,7 +128,13 @@
             />
             <div class="card-body">
               <h5 class="card-title">Lewandowski</h5>
-              <a href="#" class="btn btn-primary">Select</a>
+              <button
+                class="player-btn"
+                id="lewandowski-card"
+                style="border: 2px solid black"
+              >
+                Select
+              </button>
             </div>
           </div>
         </div>
@@ -111,7 +147,13 @@
             />
             <div class="card-body">
               <h5 class="card-title">Sadio Mane</h5>
-              <a href="#" class="btn btn-primary">Select</a>
+              <button
+                class="player-btn"
+                id="mane-card"
+                style="border: 2px solid black"
+              >
+                Select
+              </button>
             </div>
           </div>
         </div>
@@ -124,7 +166,13 @@
             />
             <div class="card-body">
               <h5 class="card-title">Mbappe</h5>
-              <a href="#" class="btn btn-primary">Select</a>
+              <button
+                class="player-btn"
+                id="mbappe-card"
+                style="border: 2px solid black"
+              >
+                Select
+              </button>
             </div>
           </div>
         </div>
@@ -137,7 +185,13 @@
             />
             <div class="card-body">
               <h5 class="card-title">Neymar</h5>
-              <a href="#" class="btn btn-primary">Select</a>
+              <button
+                class="player-btn"
+                id="neymar-card"
+                style="border: 2px solid black"
+              >
+                Select
+              </button>
             </div>
           </div>
         </div>
@@ -150,7 +204,13 @@
             />
             <div class="card-body">
               <h5 class="card-title">Marco Reus</h5>
-              <a href="#" class="btn btn-primary">Select</a>
+              <button
+                class="player-btn"
+                id="reus-card"
+                style="border: 2px solid black"
+              >
+                Select
+              </button>
             </div>
           </div>
         </div>
@@ -163,7 +223,13 @@
             />
             <div class="card-body">
               <h5 class="card-title">Salah</h5>
-              <a href="#" class="btn btn-primary">Select</a>
+              <button
+                class="player-btn"
+                id="salah-card"
+                style="border: 2px solid black"
+              >
+                Select
+              </button>
             </div>
           </div>
         </div>
@@ -176,7 +242,13 @@
             />
             <div class="card-body">
               <h5 class="card-title">Eden Hazard</h5>
-              <a href="#" class="btn btn-primary">Select</a>
+              <button
+                class="player-btn"
+                id="hazard-card"
+                style="border: 2px solid black"
+              >
+                Select
+              </button>
             </div>
           </div>
         </div>
@@ -194,5 +266,6 @@
     <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="player.js"></script>
   </body>
 </html>
