--- a/index.html
+++ b/index.html
@@ -15,45 +15,26 @@
   <body>
     <header class="header-section">
       <div class="title-section" style="color: white">
-        <h1>
-          <em> Let's start with your Best Five...</em>
-        </h1>
+        <h1>Let's start with your Best Five...</h1>
         <p>
           There are so many good players out there. Let's see who you choose?
           Let's see if you can beat me with your best five!
         </p>
       </div>
     </header>
-    <section class="middle-section container">
-      <div class="grid grid-cols-3 gap-x-6 gap-y-6">
-        <div class="card" style="width: 15rem">
-          <img
-            class="card-img-top"
-            src="images/messi.jpg"
-            alt="Card image cap"
-          />
-          <div class="card-body" id="messi">
-            <h5 class="card-title">Lionel Messi</h5>
-            <button
-              id="messi-card"
-              class="player-btn"
-              style="border: 2px solid black"
-            >
-              Select
-            </button>
-          </div>
-        </div>
-        <div>
+    <main>
+      <section class="middle-section container">
+        <div class="grid grid-cols-3 gap-x-6 gap-y-6">
           <div class="card" style="width: 15rem">
             <img
               class="card-img-top"
-              src="images/ronaldo.jpg"
+              src="images/messi.jpg"
               alt="Card image cap"
             />
-            <div class="card-body" id="roanldo">
-              <h5 class="card-title">Cristiano Ronaldo</h5>
+            <div class="card-body" id="messi">
+              <h5 class="card-title">Lionel Messi</h5>
               <button
-                id="ronaldo-card"
+                id="messi-card"
                 class="player-btn"
                 style="border: 2px solid black"
               >
@@ -61,214 +42,227 @@
               </button>
             </div>
           </div>
-        </div>
-        <div>
-          <div class="card" style="width: 15rem">
-            <img
-              class="card-img-top"
-              src="images/bale.jpg"
-              alt="Card image cap"
-            />
-            <div class="card-body" id="bale">
-              <h5 class="card-title">Gareth Bale</h5>
-              <button
-                class="player-btn"
-                id="bale-card"
-                style="border: 2px solid black"
-              >
-                Select
-              </button>
-            </div>
-          </div>
-        </div>
-        <div>
-          <div class="card" style="width: 15rem">
-            <img
-              class="card-img-top"
-              src="images/dimaria.jpg"
-              alt="Card image cap"
-            />
-            <div class="card-body" id="maria">
-              <h5 class="card-title">Angel Di Maria</h5>
-              <button
-                class="player-btn"
-                id="maria-card"
-                style="border: 2px solid black"
-              >
-                Select
-              </button>
-            </div>
-          </div>
-        </div>
-        <div>
-          <div class="card" style="width: 15rem">
-            <img
-              class="card-img-top"
-              src="images/haland.png"
-              alt="Card image cap"
-            />
-            <div class="card-body" id="haland">
-              <h5 class="card-title">Erling Haland</h5>
-              <button
-                class="player-btn"
-                id="haland-card"
-                style="border: 2px solid black"
-              >
-                Select
-              </button>
-            </div>
-          </div>
-        </div>
-        <div>
-          <div class="card" style="width: 15rem">
-            <img
-              class="card-img-top"
-              src="images/lewandowski.jpg"
-              alt="Card image cap"
-            />
-            <div class="card-body" id="lewandowski">
-              <h5 class="card-title" >Robert Lewandowski</h5>
-              <button
-                class="player-btn"
-                id="lewandowski-card"
-                style="border: 2px solid black"
-              >
-                Select
-              </button>
-            </div>
-          </div>
-        </div>
-        <div>
-          <div class="card" style="width: 15rem">
-            <img
-              class="card-img-top"
-              src="images/mane.jpg"
-              alt="Card image cap"
-            />
-            <div class="card-body" id="mane">
-              <h5 class="card-title">Sadio Mane</h5>
-              <button
-                class="player-btn"
-                id="mane-card"
-                style="border: 2px solid black"
-              >
-                Select
-              </button>
-            </div>
-          </div>
-        </div>
-        <div>
-          <div class="card" style="width: 15rem">
-            <img
-              class="card-img-top"
-              src="images/mbappe.jpg"
-              alt="Card image cap"
-            />
-            <div class="card-body" id="mbappe">
-              <h5 class="card-title">Kylian Mbappe</h5>
-              <button
-                class="player-btn"
-                id="mbappe-card"
-                style="border: 2px solid black"
-              >
-                Select
-              </button>
-            </div>
-          </div>
-        </div>
-        <div>
-          <div class="card" style="width: 15rem">
-            <img
-              class="card-img-top"
-              src="images/neymar.jpg"
-              alt="Card image cap"
-            />
-            <div class="card-body" id="neymar">
-              <h5 class="card-title">Neymar Jr</h5>
-              <button
-                class="player-btn"
-                id="neymar-card"
-                style="border: 2px solid black"
-              >
-                Select
-              </button>
-            </div>
-          </div>
-        </div>
-        <div>
-          <div class="card" style="width: 15rem">
-            <img
-              class="card-img-top"
-              src="images/reus.jpg"
-              alt="Card image cap"
-            />
-            <div class="card-body" id="reus">
-              <h5 class="card-title">Marco Reus</h5>
-              <button
-                class="player-btn"
-                id="reus-card"
-                style="border: 2px solid black"
-              >
-                Select
-              </button>
-            </div>
-          </div>
-        </div>
-        <div>
-          <div class="card" style="width: 15rem">
-            <img
-              class="card-img-top"
-              src="images/salah.jpg"
-              alt="Card image cap"
-            />
-            <div class="card-body" id="salah">
-              <h5 class="card-title">Mo Salah</h5>
-              <button
-                class="player-btn"
-                id="salah-card"
-                style="border: 2px solid black"
-              >
-                Select
-              </button>
-            </div>
-          </div>
-        </div>
-        <div>
-          <div class="card" style="width: 15rem">
-            <img
-              class="card-img-top"
-              src="images/hazard.png"
-              alt="Card image cap"
-            />
-            <div class="card-body" id="hazard">
-              <h5 class="card-title">Eden Hazard</h5>
-              <button
-                class="player-btn"
-                id="hazard-card"
-                style="border: 2px solid black"
-              >
-                Select
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="right-middle-section">
-        <div class="selected" style="border: 2px solid black">
           <div>
-            <h2>Selected</h2>
-            </h2>
-            <ol id="player-list">
-            </ol>
+            <div class="card" style="width: 15rem">
+              <img
+                class="card-img-top"
+                src="images/ronaldo.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body" id="roanldo">
+                <h5 class="card-title">Cristiano Ronaldo</h5>
+                <button
+                  id="ronaldo-card"
+                  class="player-btn"
+                  style="border: 2px solid black"
+                >
+                  Select
+                </button>
+              </div>
+            </div>
           </div>
-          <div></div>
+          <div>
+            <div class="card" style="width: 15rem">
+              <img
+                class="card-img-top"
+                src="images/bale.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body" id="bale">
+                <h5 class="card-title">Gareth Bale</h5>
+                <button
+                  class="player-btn"
+                  id="bale-card"
+                  style="border: 2px solid black"
+                >
+                  Select
+                </button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card" style="width: 15rem">
+              <img
+                class="card-img-top"
+                src="images/dimaria.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body" id="maria">
+                <h5 class="card-title">Angel Di Maria</h5>
+                <button
+                  class="player-btn"
+                  id="maria-card"
+                  style="border: 2px solid black"
+                >
+                  Select
+                </button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card" style="width: 15rem">
+              <img
+                class="card-img-top"
+                src="images/haland.png"
+                alt="Card image cap"
+              />
+              <div class="card-body" id="haland">
+                <h5 class="card-title">Erling Haland</h5>
+                <button
+                  class="player-btn"
+                  id="haland-card"
+                  style="border: 2px solid black"
+                >
+                  Select
+                </button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card" style="width: 15rem">
+              <img
+                class="card-img-top"
+                src="images/lewandowski.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body" id="lewandowski">
+                <h5 class="card-title">Robert Lewandowski</h5>
+                <button
+                  class="player-btn"
+                  id="lewandowski-card"
+                  style="border: 2px solid black"
+                >
+                  Select
+                </button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card" style="width: 15rem">
+              <img
+                class="card-img-top"
+                src="images/mane.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body" id="mane">
+                <h5 class="card-title">Sadio Mane</h5>
+                <button
+                  class="player-btn"
+                  id="mane-card"
+                  style="border: 2px solid black"
+                >
+                  Select
+                </button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card" style="width: 15rem">
+              <img
+                class="card-img-top"
+                src="images/mbappe.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body" id="mbappe">
+                <h5 class="card-title">Kylian Mbappe</h5>
+                <button
+                  class="player-btn"
+                  id="mbappe-card"
+                  style="border: 2px solid black"
+                >
+                  Select
+                </button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card" style="width: 15rem">
+              <img
+                class="card-img-top"
+                src="images/neymar.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body" id="neymar">
+                <h5 class="card-title">Neymar Jr</h5>
+                <button
+                  class="player-btn"
+                  id="neymar-card"
+                  style="border: 2px solid black"
+                >
+                  Select
+                </button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card" style="width: 15rem">
+              <img
+                class="card-img-top"
+                src="images/reus.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body" id="reus">
+                <h5 class="card-title">Marco Reus</h5>
+                <button
+                  class="player-btn"
+                  id="reus-card"
+                  style="border: 2px solid black"
+                >
+                  Select
+                </button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card" style="width: 15rem">
+              <img
+                class="card-img-top"
+                src="images/salah.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body" id="salah">
+                <h5 class="card-title">Mo Salah</h5>
+                <button
+                  class="player-btn"
+                  id="salah-card"
+                  style="border: 2px solid black"
+                >
+                  Select
+                </button>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card" style="width: 15rem">
+              <img
+                class="card-img-top"
+                src="images/hazard.png"
+                alt="Card image cap"
+              />
+              <div class="card-body" id="hazard">
+                <h5 class="card-title">Eden Hazard</h5>
+                <button
+                  class="player-btn"
+                  id="hazard-card"
+                  style="border: 2px solid black"
+                >
+                  Select
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="calculation" style="border: 2px solid black">
-          <h1>Selected</h1>
-          <ol id="player-list"></ol>
+        <div class="right-middle-section">
+          <div class="selected" style="border: 2px solid black">
+            <h2>Selected</h2>
+            <ol id="player-list"></ol>
+          </div>
+          <div class="calculation" style="border: 2px solid black">
+            <h1>Selected</h1>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </main>
     <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
