--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
       <section class="middle-section container">
-        <div class="grid grid-cols-3 gap-x-6 gap-y-6">
+        <div class="grid grid-cols-3 gap-x-6 gap-y-6 mx-5">
           <div class="card" style="width: 15rem">
             <img
               class="card-img-top"
@@ -252,18 +252,121 @@
             </div>
           </div>
         </div>
-        <div class="right-middle-section">
-          <div class="selected" style="border: 2px solid black">
-            <h2>Selected</h2>
-            <ol id="player-list"></ol>
+        <div
+          class="right-middle-section"
+          style="position: relative; left: 10em"
+        >
+          <div class="selected" style="margin-bottom: 10px">
+            <div style="text-align: center; position: relative; top: 10px">
+              <h2>Selected</h2>
+              <br />
+              <ol id="player-list"></ol>
+            </div>
           </div>
-          <div class="calculation" style="border: 2px solid black">
-            <h1>Selected</h1>
+          <div class="calculation" style="text-align: center">
+            <h1 style="padding-top: 30px">Budget</h1>
+            <br />
+            <div style="display: flex; justify-content: space-between">
+              <h5>Per Player</h5>
+              <div
+                id="per-player-cost"
+                style="
+                  width: 121px;
+                  height: 30px;
+                  border: 2px solid white;
+                  text-align: center;
+                "
+              >
+                1000
+              </div>
+            </div>
+            <br />
+            <button
+              id="calculate-button"
+              style="
+                background-color: #015196;
+                padding: 10px 110px 10px 100px;
+                border-radius: 8px;
+              "
+            >
+              Calculate
+            </button>
+
+            <div
+              style="
+                display: flex;
+                justify-content: space-around;
+                padding-top: 30px;
+              "
+            >
+              <h4>Player Expenses</h4>
+              <span id="player-expense"></span>
+            </div>
+            <div
+              style="
+                display: flex;
+                justify-content: space-between;
+                padding-top: 20px;
+                padding-bottom: 20px;
+              "
+            >
+              <h5>Manager</h5>
+              <div
+                id="manager-cost"
+                style="
+                  width: 121px;
+                  height: 30px;
+                  border: 2px solid white;
+                  text-align: center;
+                "
+              >
+                1000
+              </div>
+            </div>
+            <div
+              style="
+                display: flex;
+                justify-content: space-between;
+                padding-bottom: 20px;
+              "
+            >
+              <h5>Coach</h5>
+              <div
+                id="coach-cost"
+                style="
+                  width: 121px;
+                  height: 30px;
+                  border: 2px solid white;
+                  text-align: center;
+                "
+              >
+                1000
+              </div>
+            </div>
+            <button
+              id="calculateTotal"
+              style="
+                background-color: #015196;
+                padding: 10px 85px 10px 90px;
+                border-radius: 8px;
+              "
+            >
+              Calculate Total
+            </button>
+            <div
+              style="
+                display: flex;
+                justify-content: space-around;
+                padding-top: 30px;
+              "
+            >
+              <h4>Total</h4>
+              <span id="total-cost"></span>
+            </div>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="player.js"></script>
