--- a/index.html
+++ b/index.html
@@ -33,13 +33,7 @@
             />
             <div class="card-body" id="messi">
               <h5 class="card-title">Lionel Messi</h5>
-              <button
-                id="messi-card"
-                class="player-btn"
-                style="border: 2px solid black"
-              >
-                Select
-              </button>
+              <button id="messi-card" class="player-btn">Select</button>
             </div>
           </div>
           <div>
@@ -51,13 +45,7 @@
               />
               <div class="card-body" id="roanldo">
                 <h5 class="card-title">Cristiano Ronaldo</h5>
-                <button
-                  id="ronaldo-card"
-                  class="player-btn"
-                  style="border: 2px solid black"
-                >
-                  Select
-                </button>
+                <button id="ronaldo-card" class="player-btn">Select</button>
               </div>
             </div>
           </div>
@@ -70,13 +58,7 @@
               />
               <div class="card-body" id="bale">
                 <h5 class="card-title">Gareth Bale</h5>
-                <button
-                  class="player-btn"
-                  id="bale-card"
-                  style="border: 2px solid black"
-                >
-                  Select
-                </button>
+                <button class="player-btn" id="bale-card">Select</button>
               </div>
             </div>
           </div>
@@ -89,13 +71,7 @@
               />
               <div class="card-body" id="maria">
                 <h5 class="card-title">Angel Di Maria</h5>
-                <button
-                  class="player-btn"
-                  id="maria-card"
-                  style="border: 2px solid black"
-                >
-                  Select
-                </button>
+                <button class="player-btn" id="maria-card">Select</button>
               </div>
             </div>
           </div>
@@ -108,13 +84,7 @@
               />
               <div class="card-body" id="haland">
                 <h5 class="card-title">Erling Haland</h5>
-                <button
-                  class="player-btn"
-                  id="haland-card"
-                  style="border: 2px solid black"
-                >
-                  Select
-                </button>
+                <button class="player-btn" id="haland-card">Select</button>
               </div>
             </div>
           </div>
@@ -127,13 +97,7 @@
               />
               <div class="card-body" id="lewandowski">
                 <h5 class="card-title">Robert Lewandowski</h5>
-                <button
-                  class="player-btn"
-                  id="lewandowski-card"
-                  style="border: 2px solid black"
-                >
-                  Select
-                </button>
+                <button class="player-btn" id="lewandowski-card">Select</button>
               </div>
             </div>
           </div>
@@ -146,13 +110,7 @@
               />
               <div class="card-body" id="mane">
                 <h5 class="card-title">Sadio Mane</h5>
-                <button
-                  class="player-btn"
-                  id="mane-card"
-                  style="border: 2px solid black"
-                >
-                  Select
-                </button>
+                <button class="player-btn" id="mane-card">Select</button>
               </div>
             </div>
           </div>
@@ -165,13 +123,7 @@
               />
               <div class="card-body" id="mbappe">
                 <h5 class="card-title">Kylian Mbappe</h5>
-                <button
-                  class="player-btn"
-                  id="mbappe-card"
-                  style="border: 2px solid black"
-                >
-                  Select
-                </button>
+                <button class="player-btn" id="mbappe-card">Select</button>
               </div>
             </div>
           </div>
@@ -184,13 +136,7 @@
               />
               <div class="card-body" id="neymar">
                 <h5 class="card-title">Neymar Jr</h5>
-                <button
-                  class="player-btn"
-                  id="neymar-card"
-                  style="border: 2px solid black"
-                >
-                  Select
-                </button>
+                <button class="player-btn" id="neymar-card">Select</button>
               </div>
             </div>
           </div>
@@ -203,13 +149,7 @@
               />
               <div class="card-body" id="reus">
                 <h5 class="card-title">Marco Reus</h5>
-                <button
-                  class="player-btn"
-                  id="reus-card"
-                  style="border: 2px solid black"
-                >
-                  Select
-                </button>
+                <button class="player-btn" id="reus-card">Select</button>
               </div>
             </div>
           </div>
@@ -222,13 +162,7 @@
               />
               <div class="card-body" id="salah">
                 <h5 class="card-title">Mo Salah</h5>
-                <button
-                  class="player-btn"
-                  id="salah-card"
-                  style="border: 2px solid black"
-                >
-                  Select
-                </button>
+                <button class="player-btn" id="salah-card">Select</button>
               </div>
             </div>
           </div>
@@ -241,13 +175,7 @@
               />
               <div class="card-body" id="hazard">
                 <h5 class="card-title">Eden Hazard</h5>
-                <button
-                  class="player-btn"
-                  id="hazard-card"
-                  style="border: 2px solid black"
-                >
-                  Select
-                </button>
+                <button class="player-btn" id="hazard-card">Select</button>
               </div>
             </div>
           </div>
@@ -320,7 +248,7 @@
                   text-align: center;
                 "
               >
-                1000
+                4000
               </div>
             </div>
             <div
@@ -340,7 +268,7 @@
                   text-align: center;
                 "
               >
-                1000
+                2000
               </div>
             </div>
             <button
