--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Tangerine"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Choose Your Best 5!</title>
   </head>
@@ -79,7 +83,7 @@
             <div class="card" style="width: 15rem">
               <img
                 class="card-img-top"
-                src="images/haland.png"
+                src="images/haland.jpg"
                 alt="Card image cap"
               />
               <div class="card-body" id="haland">
@@ -96,7 +100,7 @@
                 alt="Card image cap"
               />
               <div class="card-body" id="lewandowski">
-                <h5 class="card-title">Robert Lewandowski</h5>
+                <h5 class="card-title">Lewandowski</h5>
                 <button class="player-btn" id="lewandowski-card">Select</button>
               </div>
             </div>
@@ -170,7 +174,7 @@
             <div class="card" style="width: 15rem">
               <img
                 class="card-img-top"
-                src="images/hazard.png"
+                src="images/hazard.jpg"
                 alt="Card image cap"
               />
               <div class="card-body" id="hazard">
@@ -184,49 +188,50 @@
           class="right-middle-section"
           style="position: relative; left: 10em"
         >
-          <div class="selected" style="margin-bottom: 10px">
+          <div
+            class="selected"
+            style="margin-bottom: 10px; font-family: 'Poppins', sans-serif"
+          >
             <div style="text-align: center; position: relative; top: 10px">
-              <h2>Selected</h2>
+              <h2
+                style="
+                  font-weight: bold;
+                  font-size: 35px;
+                  font-style: italic;
+                  color: #ffa500;
+                "
+              >
+                Selected
+              </h2>
               <br />
               <ol id="player-list"></ol>
             </div>
           </div>
           <div class="calculation" style="text-align: center">
-            <h1 style="padding-top: 30px">Budget</h1>
+            <h1
+              style="
+                padding-top: 30px;
+                font-family: 'Poppins', sans-serif;
+                font-weight: bold;
+                font-size: 35px;
+                font-style: italic;
+                color: #d8bfd8;
+              "
+            >
+              Budget
+            </h1>
             <br />
             <div style="display: flex; justify-content: space-between">
               <h5>Per Player</h5>
-              <div
+              <input
                 id="per-player-cost"
-                style="
-                  width: 121px;
-                  height: 30px;
-                  border: 2px solid white;
-                  text-align: center;
-                "
-              >
-                1000
-              </div>
+                type="text"
+                style="background-color: black; border: 2px solid white"
+              />
             </div>
             <br />
-            <button
-              id="calculate-button"
-              style="
-                background-color: #015196;
-                padding: 10px 110px 10px 100px;
-                border-radius: 8px;
-              "
-            >
-              Calculate
-            </button>
-
-            <div
-              style="
-                display: flex;
-                justify-content: space-around;
-                padding-top: 30px;
-              "
-            >
+            <button id="calculate-button">Calculate</button>
+            <div id="player-expense-div">
               <h4>Player Expenses</h4>
               <span id="player-expense"></span>
             </div>
@@ -239,17 +244,11 @@
               "
             >
               <h5>Manager</h5>
-              <div
+              <input
                 id="manager-cost"
-                style="
-                  width: 121px;
-                  height: 30px;
-                  border: 2px solid white;
-                  text-align: center;
-                "
-              >
-                4000
-              </div>
+                type="text"
+                style="background-color: black; border: 2px solid white"
+              />
             </div>
             <div
               style="
@@ -259,17 +258,11 @@
               "
             >
               <h5>Coach</h5>
-              <div
+              <input
                 id="coach-cost"
-                style="
-                  width: 121px;
-                  height: 30px;
-                  border: 2px solid white;
-                  text-align: center;
-                "
-              >
-                2000
-              </div>
+                type="text"
+                style="background-color: black; border: 2px solid white"
+              />
             </div>
             <button
               id="calculateTotal"
@@ -289,13 +282,16 @@
               "
             >
               <h4>Total</h4>
-              <span id="total-cost"></span>
+              <span id="total-cost" style="color: red"></span>
             </div>
           </div>
         </div>
       </section>
+      <hr />
     </main>
-
+    <footer>
+      <p>Copyright @ 2022 All Rights Reserved.</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="player.js"></script>
   </body>
